Add javadoc, fix bug